# BIST-Prediction-System

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-02-plan1-scaffolding-storage-ingestion.md  2026-04-03-plan2-rust-feature-engine.md  2026-04-04-plan3-quantitative-alpha-layer.md  2026-04-04-plan4-model-layer-evaluation.md
docs/superpowers/specs/: 2026-04-02-bist-predictor-design.md
rust/bist_features/: Cargo.toml
rust/bist_features/src/: correlations.rs  indicators.rs  lib.rs  patterns.rs
src/bist_predict/: __init__.py  cli.py  config.py
src/bist_predict/evaluation/: __init__.py  backtest.py  metrics.py  tracker.py
src/bist_predict/features/: __init__.py  (+5 more)
tests/: conftest.py  test_cli.py
tests/test_evaluation/: test_backtest.py  test_metrics.py  test_tracker.py
tests/test_features/: test_engine.py  test_macro_features.py  test_rust_correlations.py  test_rust_indicators.py  test_rust_patterns.py  test_sentiment_features.py  test_store.py  test_temporal_features.py
tests/test_ingest/: test_integration.py  test_isyatirim.py  test_quality.py  test_scheduler.py  test_sentiment.py  test_tcmb.py  test_types.py  test_yahoo.py
tests/test_models/: test_calibration.py  test_ensemble.py  test_lightgbm_model.py  test_lstm_model.py  test_registry.py  test_transformer_model.py  test_types.py  test_xgboost_model.py
tests/test_quant/: test_factors.py  test_regime.py  test_risk.py  test_signal_quality.py  test_statistical.py
tests/test_storage/: test_database.py
(+34 files in other folders)
