[project]
name = "bist-predict"
version = "0.1.0"
description = "BIST-100 Stock Market Prediction System"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "yfinance>=0.2",
    "feedparser>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "numpy>=1.26",
]

[project.scripts]
bist-predict = "bist_predict.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bist_predict"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
